--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
     <meta name="keywords"
-        content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-    <meta name="author" content="FreeHTML5.co" />
+        content="cuci mobil panggilan malang" />
+    <meta name="author" content="Irfan Zarkasyi" />
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content="" />
