--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>g6washncare</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
+    <meta name="description" content="Cuci mobil panggilan malang" />
     <meta name="keywords"
         content="cuci mobil panggilan malang" />
     <meta name="author" content="Irfan Zarkasyi" />
